# hy-ohtuvarasto

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
dir1/: foo.txt
dir2/: try.txt
src/: app.py  index.py  varasto.py  warehouse.py
src/templates/: add_item.html  base.html  create_warehouse.html  edit_warehouse.html  index.html  warehouse.html
src/tests/: varasto_test.py
