[project]
name = "varasto"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Luukkainen",email = "mluukkai@iki.fi"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
coverage = "^7.11.0"
pylint = "^4.0.2"
pre-commit = "^4.3.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
